<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.carrotdata</groupId>
    <artifactId>membench</artifactId>
    <packaging>jar</packaging>
    <name>Memcached benchmarks</name>
    <version>0.11-SNAPSHOT</version>
    <url>http://www.server.com</url>
    <build>
        <plugins>
           <plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-javadoc-plugin</artifactId>
        	<version>3.6.3</version>
      	   </plugin>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <!--release>8</release-->
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>3.4.1</version>
       <executions>
         <execution>
           <goals>
             <goal>test-jar</goal>
           </goals>
         </execution>
       </executions>
     </plugin>
     <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Xmx4g --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <excludes>
		    </excludes>
                    <systemProperties>
                        <property>
                            <name>surefire</name>
                            <value>true</value>
                        </property>
                    </systemProperties>
                    <systemPropertyVariables>
                        <property>
                            <name>configurationFile</name>
                            <value>${project.build.directory}/conf/log4j2-console.xml</value>
                        </property>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
          <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                	<descriptorRefs>
                        	<descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
			<!--archive>
          			<manifest>
            				<mainClass>com.carrotdata.membench.Main</mainClass>
          			</manifest>
        		</archive-->
               	</configuration>
               	<executions>
               		<execution>
                        	<id>make-assembly</id> <!-- this is used for inheritance merges -->
                               	<phase>package</phase> <!-- bind to the packaging phase -->
                               	<goals>
                               		<goal>single</goal>
                               	</goals>
                        </execution>
             	</executions>
         </plugin>
    </plugins>
    </build>
    <!--dependencyManagement-->
        <dependencies>
	<dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.23.1</version>
       </dependency>
 	<dependency>
                <groupId>com.googlecode.xmemcached</groupId>
                <artifactId>xmemcached</artifactId>
                <version>2.4.8</version>
        </dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
        <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.6.1</version>
        </dependency>
    </dependencies>
    <!--/dependencyManagement-->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>

